# XZMUNetAutologin

./: README.md  index.html  package.json  pnpm-lock.yaml
src/: App.vue  main.ts  structs.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  desktop.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  structs.rs  util.rs  xzmu.rs
src/router/: index.ts
src/views/: Home.vue  Login.vue
